--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,10 @@ mlr_2.4:
 -- classif.sparseLDA
 -- classif.sparseMDA 
 
+- removed learners (due to outdated R-package):
+-- classif.xgboost
+-- regr.xgboost
+
 mlr_2.3:
 - resample now returns an object of class ResampleResult (downward compatible)
   to allow for a print method.
