--- a/vignettes/mlr.Rmd
+++ b/vignettes/mlr.Rmd
@@ -66,3 +66,21 @@ Reading is highly recommended!
 * [Online Tutorial](http://berndbischl.github.io/mlr/tutorial/html/)
 * [Download](http://berndbischl.github.io/mlr/tutorial/mlr_tutorial.zip) online tutorial as zip for offline usage
 * [Wiki](https://github.com/berndbischl/mlr/wiki) with additional information for developers
+
+
+## Thanks
+
+We would like to thank the authors of all packages `mlr` uses under the hood:
+
+```{r,echo=FALSE,results="asis"}
+parse_pkgs = function(x) {
+  x = strsplit(x, "\n")[[1L]]
+  x = sub("^([[:alnum:]]+).*", "\\1", x)
+  x[nzchar(x)]
+}
+
+desc = read.dcf("../DESCRIPTION")
+pkgs = c(parse_pkgs(desc[, "Depends"]), parse_pkgs(desc[, "Imports"]), parse_pkgs(desc[, "Suggests"]))
+pkgs = sort(setdiff(pkgs, "R"))
+cat(sprintf("* [%1$s](http://cran.r-project.org/web/packages/%1$s/)", pkgs), sep = "\n")
+```
