--- a/vignettes/mlr.Rmd
+++ b/vignettes/mlr.Rmd
@@ -79,7 +79,7 @@ parse_pkgs = function(x) {
   x[nzchar(x)]
 }
 
-desc = read.dcf("../DESCRIPTION")
+desc = file.path(find.package("mlr"), "DESCRIPTION")
 pkgs = c(parse_pkgs(desc[, "Depends"]), parse_pkgs(desc[, "Imports"]), parse_pkgs(desc[, "Suggests"]))
 pkgs = sort(setdiff(pkgs, "R"))
 cat(sprintf("* [%1$s](http://cran.r-project.org/web/packages/%1$s/)", pkgs), sep = "\n")
