--- a/vignettes/mlr.Rmd
+++ b/vignettes/mlr.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "mlr: Machine Learning in R"
-author: "Bernd Bischl, Michael Lang, Jakob Richter, Erich Studerus"
+author: "Bernd Bischl, Michael Lang, Jakob Richter, Jakob Bossek, Leonard Judt,
+Tobias Kuehn, Erich Studerus, Lars Kotthoff"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
@@ -74,13 +75,13 @@ We would like to thank the authors of all packages which `mlr` uses under the ho
 
 ```{r,echo=FALSE,results="asis"}
 parse_pkgs = function(x) {
-  x = strsplit(x, "\n")[[1L]]
-  x = sub("^([[:alnum:]]+).*", "\\1", x)
+  x = strsplit(x, "\n|,")[[1L]]
+  x = sub("^ ?([[:alnum:]]+).*", "\\1", x)
   x[nzchar(x)]
 }
 
-desc = file.path(find.package("mlr"), "DESCRIPTION")
-pkgs = c(parse_pkgs(desc[, "Depends"]), parse_pkgs(desc[, "Imports"]), parse_pkgs(desc[, "Suggests"]))
+desc = packageDescription("mlr")
+pkgs = c(parse_pkgs(desc$Depends), parse_pkgs(desc$Imports), parse_pkgs(desc$Suggests))
 pkgs = sort(setdiff(pkgs, "R"))
 cat(sprintf("* [%1$s](http://cran.r-project.org/web/packages/%1$s/)", pkgs), sep = "\n")
 ```
