--- a/NEWS
+++ b/NEWS
@@ -11,7 +11,7 @@ mlr_2.4:
   regr/classif for ctree, regr/classif/surv for cforest, and regr/classif for blackboost
 - update on learners: added sparseLDA and removed xgboost
 - reg.km: added param 'iso'
-- classif.mda: added param 'start.method' and changed its default to 'lvq'
+- classif.mda: added param 'start.method' and changed its default to 'lvq', added params 'sub.df', 'tot.df' and 'criterion'.
 - tuneDesign: Tune a learner with a given Design, so that you can tune it with ParamHelpers::generateDesign
 
 mlr_2.3:
