--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,7 @@ mlr_2.4:
 -- classif.rFerns
 -- classif.wsrf
 -- regr.nodeHarvest
+-- regr.slim
 
 mlr_2.3:
 - resample now returns an object of class ResampleResult (downward compatible)
