--- a/NEWS
+++ b/NEWS
@@ -15,9 +15,9 @@ mlr_2.4:
 - tuneDesign: Tune a learner with a given Design, so that you can tune it with ParamHelpers::generateDesign
 - tuneIrace: allows to set the precision / digits within irace (using the argument 'digits'
   in makeTuneControlIrace); default is maximum precision
-- generateLearningCurve and plotLearningCurve helps to plot the learning curve demonstrating how the performance increases with more observations.
+- generateLearningCurveData and plotLearningCurve helps to plot the learning curve demonstrating how the performance increases with more observations.
 - plotROCRCurves has been rewritten to use ggplot2
-- The generation and plotting of ROC curves has been separated into two functions: generateROCRCurves and plotROCRCurves.
+- The generation and plotting of ROC curves has been separated into two functions: generateROCRCurvesData and plotROCRCurves.
 
 - new learners:
 -- classif.bst
