rework NEWS even more

--- a/NEWS
+++ b/NEWS
@@ -1,34 +1,33 @@
 mlr_2.4:
+- getTaskFormula / getTaskFormulaAsString have new argument 'explicit.features'
+- getTaskData now has recodeY = "drop.levels" which drops empty factor levels
+- option fix.factors in makeLearner was renamed to fix.factors.prediction for clarity
+- showHyperPars was removed. getParamSet does exactly the same thing
 - we had to slightly change how the mem usage is reported in tuning and feature selection.
   See TuneControl and FeatSelControl where it is documented what is done now.
-- showHyperPars was removed. getParamSet does exactly the same thing
-- option fix.factors in makeLearner was renamed to fix.factors.prediction for clarity
-- getTaskData now has recodeY = "drop.levels" which drops empty factor levels
-- classif.ada: added "loss" hyperpar
-- add missings properties to all ctree and cforest methods:
-  regr/classif for ctree, regr/classif/surv for cforest, and regr/classif for blackboost
-- getTaskFormula / getTaskFormulaAsString have new argument 'explicit.features'
-- learner xgboost was removed
-- reg.km: added param 'iso'
-- classif.mda: added param 'start.method' and changed its default to 'lvq', added params 'sub.df', 'tot.df'
-  and 'criterion'.
 - tuneDesign: Tune a learner with a given Design, so that you can tune it with ParamHelpers::generateDesign
 - tuneIrace: allows to set the precision / digits within irace (using the argument 'digits'
   in makeTuneControlIrace); default is maximum precision
-- generateLearningCurveData and plotLearningCurve helps to plot the learning curve demonstrating how the
-  performance increases with more observations.
+- for plotting in general we try to introduce a "data layer", so the data can be generated independently
+  of the plotting first, into well-defined objects; these can then be plotted with mlr or custom code;
+  the naming scheme is always generate<Foo>Data and plot<Foo>
+- getFilterValues is deprecated in favor of generateFilterValuesData
+- plotFilterValues and  can now plot multiple filter methods using facetting
 - plotROCRCurves has been rewritten to use ggplot2
-- The generation and plotting of ROC curves has been separated into two functions: generateROCRCurvesData
-  and plotROCRCurves.
-- experimental ggvis functions have been added: plotROCRCurvesGGVIS, plotLearningCurveGGVIS,
-  plotTuneMultiCritResultGGVIS, plotThreshVsPerfGGVIS, and plotFilterValuesGGVIS
-- getFeatureValues is deprecated in favor of generateFeatureValuesData
-- plotFeatureValues and plotFeatureValuesGGVIS can now plot multiple filter methods using facetting
-  and interactivity (via Shiny) respectively.
+- classif.ada: added "loss" hyperpar
+- add missings properties to all ctree and cforest methods:
+  regr/classif for ctree, regr/classif/surv for cforest, and regr/classif for blackboost
+- learner xgboost was removed, because the package is not on CRAN anymore, unfortunately
+- reg.km: added param 'iso'
+- classif.mda: added param 'start.method' and changed its default to 'lvq', added params 'sub.df', 'tot.df'
+  and 'criterion'.
 
 - new functions
 -- getTaskSize
 -- getNestedTuneResultsX, getNestedTuneResultsOptPathDf
+-- generateLearningCurveData, plotLearningCurve 
+-- experimental ggvis functions: plotROCRCurvesGGVIS, plotLearningCurveGGVIS, 
+   plotTuneMultiCritResultGGVIS, plotThreshVsPerfGGVIS, and plotFilterValuesGGVIS
 
 - new learners:
 -- classif.bst
